# mono-app

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  requests.http
.github/actions/setup/: action.yml
.github/workflows/: code-quality.yml
src/: api.py  main.py  mocks.py  models.py  run.py
src/transactions/: mock_data.py  models.py  router.py
tests/: test_adder.py  test_api.py  test_main.py  test_transactions.py
