[project]
name = "mono-app"
version = "0.1.0"
description = "Accounting financial data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi>=0.115.6"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = "src"
