[project]
name = "mono-app"
version = "0.1.0"
description = "Accounting financial data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi>=0.115.6"]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
    "mypy>=1.14.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.mypy]
mypy_path = "src"
