[project]
name = "mono-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=33.3.0",
    "fastapi[standard]>=0.115.6",
    "polyfactory>=2.18.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.distutils.bdist_wheel]
universal = true

[dependency-groups]
dev = [
    "pyright>=1.1.391",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
include = ["src"]
exclude = [".venv"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.hatch.build.targets.wheel]
packages = ["src/test"]
